Bug fix in table creation of advert, End Point T01 updated

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.datasource.password= dev_password
 
 #jpa
 spring.jpa.hibernate.ddl-auto= update
-spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQL81Dialect
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql= true
 spring.jpa.show-sql=true
 
