--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
 #port
-server.port =  8080
+server.port =  8081
 
 server.error.include-binding-errors=always
 server.error.include-message=always
@@ -16,4 +16,14 @@ spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQL81Diale
 spring.jpa.properties.hibernate.format_sql= true
 spring.jpa.show-sql=true
 
+#loglama islemleri
+logging.file.name= log/estatemanagement_log.log
+logging.pattern.file= "%d %-5level [%thread] %logger:%msg%n"
+logging.level.org.springframework.web=WARN
+logging.level.org.hibernate=INFO
+logging.level.com.project=INFO
+
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+
+backendapi.app.jwtExpirationsMs=8640000
+backendapi.app.jwtSecret=this_is_secret_key
