--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,3 +27,15 @@ spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 
 backendapi.app.jwtExpirationsMs=8640000
 backendapi.app.jwtSecret=this_is_secret_key
+
+
+
+#Mail
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=luvenda@gmail.com
+spring.mail.password=
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+backendapi.app.mailaddress=luvenda@gmail.com
