--- a/pom.xml
+++ b/pom.xml
@@ -65,17 +65,15 @@
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
-
-<!--                <dependency>-->
-<!--                    <groupId>org.springframework.boot</groupId>-->
-<!--                    <artifactId>spring-boot-starter-security</artifactId>-->
-<!--                </dependency>-->
-<!--                <dependency>-->
-<!--                    <groupId>io.jsonwebtoken</groupId>-->
-<!--                    <artifactId>jjwt</artifactId>-->
-<!--                    <version>0.9.1</version>-->
-<!--                </dependency>-->
-
+     <dependency>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter-security</artifactId>
+                </dependency>
+                <dependency>
+                    <groupId>io.jsonwebtoken</groupId>
+                    <artifactId>jjwt</artifactId>
+                    <version>0.9.1</version>
+                </dependency>
 
         <dependency>
             <groupId>org.springdoc</groupId>
