--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,10 @@
 
 #port
-server.port = 55896
+server.port =  8081
 
 server.error.include-binding-errors=always
 server.error.include-message=always
 server.error.include-stacktrace= never
-
 spring.application.name=estate.management
 spring.datasource.url= jdbc:postgresql://localhost:5432/estate_management_db
 spring.datasource.username= dev_user
@@ -17,12 +16,6 @@ spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQL81Diale
 spring.jpa.properties.hibernate.format_sql= true
 spring.jpa.show-sql=true
 
-
-#joken uretirken gerekli olan expiration zamani ve secret key
-backendapi.app.jwtExpirationsMs=8640000
-backendapi.app.jwtSecret=bu_cok_gizli_bir_key
-
-
 #loglama islemleri
 logging.file.name= log/estatemanagement_log.log
 logging.pattern.file= "%d %-5level [%thread] %logger:%msg%n"
@@ -31,3 +24,18 @@ logging.level.org.hibernate=INFO
 logging.level.com.project=INFO
 
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+
+backendapi.app.jwtExpirationsMs=8640000
+backendapi.app.jwtSecret=this_is_secret_key
+
+
+
+#Mail
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=luvenda@gmail.com
+spring.mail.password=
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+backendapi.app.mailaddress=luvenda@gmail.com
